recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:12: error: not found: value level
  snowSide(level-1,length/3)
           ^Koch:14: error: not found: value level
  snowSide(level-1,length/3)
           ^Koch:16: error: not found: value level
  snowSide(level-1,length/3)
           ^Koch:18: error: not found: value level
  snowSide(level-1,length/3)
           ^